# garmin-workout-sync

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  profile.example.json  pyproject.toml  requirements.txt
.claude/skills/creating-garmin-workouts/: SKILL.md
.claude/skills/references/: codex-tools.md
.claude/skills/training-recovery/: SKILL.md
docs/superpowers/specs/: 2026-06-28-dev-experience-onboarding-design.md
examples/: week-base.json
garmin_sync/: __init__.py  auth.py  cli.py  client.py  exercises.py  workouts.py  zones.py
tests/: test_exercises.py  test_workouts.py  test_zones.py
