[project]
name = "garmin-workout-sync"
version = "0.1.0"
description = "Build and push structured workouts (run/bike/strength/Hyrox) to Garmin Connect from a declarative plan."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["garminconnect>=0.3.5"]

[project.scripts]
garmin-sync = "garmin_sync.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["garmin_sync"]
